[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hurtboxes + Hitboxes/HurtBox.gd" type="Script" id=1]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibilityEnded" from="." to="." method="_on_HurtBox_invincibilityEnded"]
[connection signal="invincibilityStarted" from="." to="." method="_on_HurtBox_invincibilityStarted"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
